convert to using page ranges for all checkpoint stuff and no checkpoints whatsoever, for checkpoint-file enabled wikis
this is a large refactor but it can't be helped.

Bug: T160507
Change-Id: I58eb8b5006bfb3b9e7b5274816c1c92b62bc3524

--- a/xmldumps-backup/defaults.conf
+++ b/xmldumps-backup/defaults.conf
@@ -61,6 +61,7 @@ pagesPerChunkHistory=0
 revsPerChunkHistory=0
 pagesPerChunkAbstract=0
 jobsperbatch=""
+revsPerJob=1000000
 
 [otherformats]
 multistream=0
