retry failed page content pieces immediately after page content step completes
This means we don't regenerate partial stubs, we just put the failed
commands back in the queue and retry until success or we hit max retry
limit.

There are several new config settings as a result of this update.

Bug: T160507
Change-Id: I7db012f3ca8670e3274d33c7ff860962a7eae8f2

--- a/xmldumps-backup/defaults.conf
+++ b/xmldumps-backup/defaults.conf
@@ -62,6 +62,9 @@ revsPerChunkHistory=0
 pagesPerChunkAbstract=0
 jobsperbatch=""
 revsPerJob=1000000
+maxRetries=0
+retryWait=30
+revsMargin=100
 
 [otherformats]
 multistream=0
