updated for support up through MW 1.29
thanks to patches from Wpmirrordev for part of this update

add dbname, page_linked_update, page_lang fields, account
for different field orders in xml, do initialization of
revision fields at beginning of retrieval

Change-Id: I90d9e5f113c61940cade3847e856541a26791c2b

--- a/xmlfileutils/Makefile
+++ b/xmlfileutils/Makefile
@@ -1,9 +1,9 @@
 # ------------------------------------------------------------------
 # This project is released under the GPL, copyright (C) Ariel T. Glenn
-# 2013: see the file COPYING for details.
+# 2013 - 2017: see the file COPYING for details.
 # ------------------------------------------------------------------
 
-MWXML2SQLVERS  = "0.0.2"
+MWXML2SQLVERS  = "0.0.3"
 PROGRAM        = mediawiki-mwxml2sql
 DISTNAME       = $(PROGRAM)-$(MWXML2SQLVERS)
 NAME_MWXML2SQL = "convert MediaWiki XML dump file to MySQL INSERT commands"
