add 'general' to the list of properties retrieved for siteinfo dumps
Bug: T171400
Change-Id: If36c29bf5e369b97649b39ad91eaac617fabe9e7

--- a/xmldumps-backup/default_api.yaml
+++ b/xmldumps-backup/default_api.yaml
@@ -3,4 +3,4 @@ siteinfo:
     namespaces:
       job: namespaces
       description: Namespaces, namespace aliases, magic words.
-      properties: [namespaces,namespacealiases,magicwords]
+      properties: [namespaces,namespacealiases,magicwords,general]
