ability to do xmlpageslogging several pieces at a time in parallel
Bug: T181935
Change-Id: Icef0aa23c363d7fa4d3b09074571f02a9ed2d3c6

--- a/xmldumps-backup/defaults.conf
+++ b/xmldumps-backup/defaults.conf
@@ -60,6 +60,8 @@ checkpointTime=0
 pagesPerChunkHistory=0
 revsPerChunkHistory=0
 pagesPerChunkAbstract=0
+chunksForPagelogs=0
+logitemsPerPagelogs=0
 jobsperbatch=""
 revsPerJob=1000000
 maxRetries=0
