config setting to permit a list of wikis to be dumped in a specific order
We don't want these for all wikis but it can be useful for small lists.

Example the big wikis that dump via 4 processes at a time.  Some of these
take days longer than others; if we start those first, multiple other wikis
will run to completion on other cores, while the first ones chug along.
If the order is by longet to dump, these big wikis often wind up
starting near the end ofthe list, and run along by themselves after
everything else is completed.

We can't really just expand the configs of these big slow wikis
so they use a pile more processors at once, that's not ok for the db
servers. (enwiki, wikidatawiki, yes, but not the rest.) So, move them
to the front of the queue.

Change-Id: I494ed57363b1ddfe0e10be0aed25facb7ca8a364

--- a/xmldumps-backup/doc/README.config
+++ b/xmldumps-backup/doc/README.config
@@ -245,6 +245,15 @@ multistream -- set this to a non-zero integer to enable multistream
 The above options do not have to be specified in the config file,
 since default values are provided.
 
+=== Misc (i.e.: [misc])
+fixed_dump_order -- set this to a non-zero integer to enable dumps
+                of wikis in the specified db list to be dumped
+                in the order listed
+               Default value: 0 (wiki dumped longest ago goes first)
+
+The above options do not have to be specified in the config file,
+since default values are provided.
+
 === Per-wiki configuration
 The following settings may be overriden for specific wikis by specifying
 their name (the name of the db in the database) as a section header,
