Add ability to skip recombine of meta-current page content, per project
Bug: T179059
Change-Id: Ic50b7ba220a93d8ff75ea53c6fb5328213a7edf0

--- a/xmldumps-backup/defaults.conf
+++ b/xmldumps-backup/defaults.conf
@@ -55,6 +55,7 @@ keep=3
 [chunks]
 chunksEnabled=0
 chunksForAbstract=0
+recombineMetaCurrent=1
 recombineHistory=1
 checkpointTime=0
 pagesPerChunkHistory=0
