use lbzip2 for recombining page content dumps, if available and configured
Bug: T179059
Change-Id: I0b8d2e569126a96cac5bffd3c5c730cda74dd777

--- a/xmldumps-backup/doc/README.config
+++ b/xmldumps-backup/doc/README.config
@@ -149,6 +149,8 @@ gzip2 -- this should get changed to gzip :-D  Location
        	       Default value: /usr/bin/gzip
 sevenzip -- Location of the 7zip binary
        	       Default value: /bin/7za
+lbzip2 -- Location of the lbzip2 binary
+       	       Default value: /usr/bin/lbzip2
 mysql -- Location of the mysql binary
        	       Default value: /usr/bin/mysql
 mysqldump -- Location of the mysqldump binary
@@ -217,6 +219,8 @@ checkpointTime -- save checkpoints of files containing revision text
 		a very large wiki which has a tendency to fail
 		somewhere in the middle (*cough*en wikipedia*cough*).
        	       Default value: 0 (no checkpoints produced)
+lbzip2threads -- how many threads lbzip2 should use for compression
+       	       Default value: 0 (lbzip2 not used)
 
 The above options do not have to be specified in the config file,
 since default values are provided.
