--- a/xmldumps-backup/defaults.conf
+++ b/xmldumps-backup/defaults.conf
@@ -39,6 +39,7 @@ max_allowed_packet=16M
 php=/bin/php,
 gzip=/usr/bin/gzip
 bzip2=/usr/bin/bzip2
+lbzip2=/usr/bin/lbzip2
 sevenzip=/bin/7za
 mysql=/usr/bin/mysql
 mysqldump=/usr/bin/mysqldump
@@ -69,6 +70,7 @@ revsPerJob=1000000
 maxRetries=0
 retryWait=30
 revsMargin=100
+lbzip2threads=0
 
 [otherformats]
 multistream=0
