convert dump scripts to python3
The big change:
removed MyPopen because Popen.communicate() now supports a timeout
as of python 3.5, updated docs to reflect that change

Also includes small pylint fixes:
* quit using if len(blah) instead of if blah:
* fix up some if: return elif: clauses
* fix some unused var names
* change some if a == b or a == c or a ==d to if a in [b, c, d]
* fix two module names, other even smaller pylint fixups

Also fixed a small amount of bitrot in dumpadmin.py, tweaked logging
here and there

Bug: T210989
Change-Id: I78c3ffa242ecf300876ca6be08ca7828d25bc84e

--- a/xmldumps-backup/defaults.conf
+++ b/xmldumps-backup/defaults.conf
@@ -3,13 +3,13 @@
 # is specified on the command line
 
 [wiki]
-dblist=""
-privatelist=""
-closedlist=""
-skipdblist=""
-tablejobs=""
-apijobs=""
-multiversion=""
+dblist=
+privatelist=
+closedlist=
+skipdblist=
+tablejobs=
+apijobs=
+multiversion=
 
 [output]
 public=/dumps/public
@@ -20,7 +20,7 @@ index=index.html
 templatedir=home
 perdumpindex=index.html
 logfile=dumplog.txt
-fileperms=0640
+fileperms=0o640
 
 [reporting]
 # set this to 'nomail' to disable email notification on dump failure
@@ -65,7 +65,7 @@ revsPerChunkHistory=0
 pagesPerChunkAbstract=0
 chunksForPagelogs=0
 logitemsPerPagelogs=0
-jobsperbatch=""
+jobsperbatch=
 revsPerJob=1000000
 maxRetries=0
 retryWait=30
