--- a/xmldumps-backup/doc/README.config
+++ b/xmldumps-backup/doc/README.config
@@ -16,11 +16,11 @@ worker name-of-config-file-here
 
 For monitor.py:
 
-python monitor.py name-of-config-file-here
+python3 monitor.py name-of-config-file-here
 
 For worker.py:
 
-python worker.py [other-options] --configfile name-of-config-file-here wikidbname-here
+python3 worker.py [other-options] --configfile name-of-config-file-here wikidbname-here
 
 ===Structure of a configuration file
 
