file truncation checks also now optionally check for last xml tag
If we are decompressing the file anyways to see if compression is good,
and it's an xml file, then we also check to see if the last line
is the close mediawiki tag. Just one more sanity check.

Bug: T212462
Change-Id: I667ea4616131b614ded49cb383fa8ffa6669723f

--- a/xmldumps-backup/defaults.conf
+++ b/xmldumps-backup/defaults.conf
@@ -48,6 +48,7 @@ tail=/usr/bin/tail
 cat=/bin/cat
 grep=/bin/grep
 checkforbz2footer=/usr/local/bin/checkforbz2footer
+dumplastbz2block=/usr/local/bin/dumplastbz2block
 writeuptopageid=/usr/local/bin/writeuptopageid
 recompressxml=/usr/local/bin/recompressxml
 
