fix tox for obsolete branch at python 2.7
If we need to rescue something and port it, it will wind up
in master anyways.

Change-Id: Ib03eca3adc3a15d5d33f6980cf9d337590e07d7b

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ skipsdist = True
 envlist = flake8
 
 [testenv:flake8]
+basepython = python2.7
 commands = flake8 {posargs}
 deps = flake8
 
@@ -10,6 +11,6 @@ deps = flake8
 exclude=.tox,./tools,toys,xmlfileutils,unused,obsolete
 # E731 do not assign a lambda expression, use a def
 # F841 local variable 'xxx' is assigned to but never used
-ignore = E731,F841
+ignore = E731,F841,W504
 max-line-length = 105
 
