write header/body/footer of xml gz files as separate streams
This then lets us find gzip start markers in the multiple stub,
abstract, or page log files produced for big wikis, and skip
past xml headers and footers, catting the resulting content
together without decompression.

Bug: T182572
Change-Id: I31b7ca8808e9785ae9f293cdeae93699dcf2c6c6

--- a/xmldumps-backup/defaults.conf
+++ b/xmldumps-backup/defaults.conf
@@ -41,6 +41,7 @@ gzip=/usr/bin/gzip
 bzip2=/usr/bin/bzip2
 lbzip2=/usr/bin/lbzip2
 sevenzip=/bin/7za
+dd=/bin/dd
 mysql=/usr/bin/mysql
 mysqldump=/usr/bin/mysqldump
 head=/usr/bin/head
