per job batches file with locking and methods for claiming jobs
This large commit does the following:
* adds a class for managing batches of page content jobs, including
  files of such batches, locking, claiming and releasing jobs, etc.
* adds a config setting contentbatchesEnabled which must be nonzero
  for the batch facility to be used
* converts all jobs to return True upon successful completion; in normal
  use this is unnecessary, but for testing we may want to specify
  the number of batches a primary and/or secondary worker do at a time
  before returning
* adds a ProgressCallback class, which is subclassed for use with batches
* adds tests for batch files and locks, and for page content generation
  in batches
* move a lot of the code in runner.py's run() method to separate methods
  for readability
* update the monitor wrapper script to permit smaller sleep times, for
  testing
* add code to monitor.py to clean up stale batches-related locks
* add tests for monitor.py batch locks cleanup
* add ability to worker.py to be run as "secondary worker" processing
  batches written out already
* cleans up the checksummer code a bit, honestly no idea why that change
  is in this patchset but it's going in now.
* log to filenames that include the hostname, since we don't yet use
  centralized logging and multiple workers on multiple hosts may otherwise
  try to write to the same file

Bug: T252396
Change-Id: I7bcbf5fef48d15575a6945f109bd0444914d9014

--- a/xmldumps-backup/defaults.conf
+++ b/xmldumps-backup/defaults.conf
@@ -27,7 +27,10 @@ fileperms=0o640
 adminmail=root@localhost
 mailfrom=root@localhost
 smtpserver=localhost
+# dump run lock more than one hour old is stale
 staleage=3600
+# batch job file more than one hour old is stale
+batchjobsstaleage=3600
 skipprivatetables=0
 
 [database]
@@ -76,6 +79,8 @@ revsMargin=100
 maxrevbytes=35000000000
 lbzip2threads=0
 revinfostash=0
+testsleep=0
+contentbatchesEnabled=0
 
 [otherformats]
 multistream=0
