Add sample code illustrating use of the commandmanagement module classes
Sample scripts now have their own directory.
Note that in order for the scripts to run properly from this subdir,
the path used for imports must be munged a bit; don't do that in
real code, it's only for the samples!

Change-Id: Iefd2e14d1be478da74faca75e6bf4b7179de4455

--- a/tox.ini
+++ b/tox.ini
@@ -13,4 +13,5 @@ exclude=.tox,wikiqueries,unused,incrementals
 # F841 local variable 'xxx' is assigned to but never used
 ignore = E731,F841,W504
 max-line-length = 105
-
+per-file-ignores =
+    xmldumps-backup/sample_scripts/*: E402
