get revision info from stubs file and use to generate page range info
We can get revision counts and lengths from the stubs file, avoiding
all db queries. For large dbs like wikidatawiki this is much kinder
and also faster. We write out the rev info and then use it later
to determine start and end pages for all page content history
jobs.

This depends on revsperpage code being merged and the updated
mwbzutils package being installed.

Bug: T263319
Change-Id: I51261ad85ca5e418827696a5b0260ba105636679

--- a/xmldumps-backup/defaults.conf
+++ b/xmldumps-backup/defaults.conf
@@ -51,6 +51,7 @@ grep=/bin/grep
 checkforbz2footer=/usr/local/bin/checkforbz2footer
 dumplastbz2block=/usr/local/bin/dumplastbz2block
 writeuptopageid=/usr/local/bin/writeuptopageid
+revsperpage=/usr/local/bin/revsperpage
 recompressxml=/usr/local/bin/recompressxml
 
 [cleanup]
@@ -74,6 +75,7 @@ revsMargin=100
 # 35 GB uncompressed in one page content file is plenty
 maxrevbytes=35000000000
 lbzip2threads=0
+revinfostash=0
 
 [otherformats]
 multistream=0
