Add siteinfo data in formatversion=2 too
The API's formatversion=2 provides data in a much better format, from
real booleans to no more `*` keys. See
<https://www.mediawiki.org/wiki/API:JSON_version_2> for more details.

Since libraries are migrating to and wanting data in the newer format
it would be nice if dumps could provide it in both, as a separate
"siteinfov2" dump.

Change-Id: Idc36e759cafbcf057c596a73717371fa66468532

--- a/xmldumps-backup/default_api.yaml
+++ b/xmldumps-backup/default_api.yaml
@@ -4,3 +4,8 @@ siteinfo:
       job: namespaces
       description: Namespaces, namespace aliases, magic words.
       properties: [namespaces,namespacealiases,magicwords,general]
+siteinfov2:
+    namespaces:
+      job: namespaces
+      description: Namespaces, namespace aliases, magic words (formatversion=2).
+      properties: [namespaces,namespacealiases,magicwords,general]
