fix up siteinfov2 job entry in api jobs table
Two jobs should not have the same name, it leads to dup entries in
various status files, among other things.

Change-Id: I0cc20281c6552f638325b2a041e000aa72307061

--- a/xmldumps-backup/default_api.yaml
+++ b/xmldumps-backup/default_api.yaml
@@ -5,7 +5,7 @@ siteinfo:
       description: Namespaces, namespace aliases, magic words.
       properties: [namespaces,namespacealiases,magicwords,general]
 siteinfov2:
-    namespaces:
-      job: namespaces
+    namespacesv2:
+      job: namespacesv2
       description: Namespaces, namespace aliases, magic words (formatversion=2).
       properties: [namespaces,namespacealiases,magicwords,general]
