Rely on a configuration file to provide the credentials to the mysql CLI
This will prevent the `-p` flag to ever get logged anywhere.

Change-Id: Ie74dc8a665dcb2da9f58621bb1d91fb3d2254d00
Signed-off-by: Balthazar Rouberol <brouberol@wikimedia.org>
Bug: T404162

--- a/xmldumps-backup/samples/wikidump.conf.sample
+++ b/xmldumps-backup/samples/wikidump.conf.sample
@@ -35,6 +35,7 @@ password=""
 # Arbitrary configuration parameters:
 #
 max_allowed_packet=32M
+client_config_file=/etc/dumps/extra/my-client.cnf
 
 [tools]
 php=/usr/bin/php
@@ -43,7 +44,7 @@ mysqldump=/usr/bin/mysqldump
 gzip=/usr/bin/gzip
 bzip2=/usr/bin/bzip2
 sevenzip=/usr/bin/7za
-checkforbz2footer=/usr/local/bin/checkforbz2footer		  
+checkforbz2footer=/usr/local/bin/checkforbz2footer
 recompressxml=/usr/local/bin/recompressxml
 writeuptopageid=/usr/local/bin/writeuptopageid
 
